# caldata-engaged-california

./: .copier-answers.yml  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: adhoc.yml  cleanup-dev-env.yml  cleanup-tests.yml  docs.yml  nightly.yml  pipeline.yml  pre-commit.yml  tests.yml
codefest/: moderator.py  to_coda.py
dbt/: catalog.json  graph.gpickle  graph_summary.json  manifest.json  partial_parse.msgpack  run_results.json
dbt-dag/: index.html
docs/: dbt-dag.md  index.md  llm-cost-control.md  setup.md
jobs/: __init__.py  ai_impact_sortition.py  load_bitly.py  load_bitly_qr.py  load_govocal.py  load_govocal_dev.py  load_sendgrid.py
jobs/utils/: drop_schemas_with_prefix.py  snowflake.py
llm-cost-control/: index.html
notebooks/LA Wildfire Agenda Setting - Option Extraction/: LA Wildfire Agenda Setting - Option Extraction.ipynb  environment.yml
notebooks/LA_FIRES_AGENDA_SETTING_TOPIC_MODELING/: environment.yml  la_fires_agenda_setting_topic_modeling.ipynb
notebooks/TENSION_COMMENT_TOPIC_MODELING/: MICHAEL_MARKS_INNOVATION_CA_GOV 2025-03-24 12:54:25.ipynb  tension_topic_modeling.ipynb
search/: search_index.json
setup/: index.html
streamlit/: environment.yml  la_recovery_agenda_setting.py
streamlit/M535GP8G9CUCKEAW/: streamlit_app.py
streamlit/ai_impact_survey/: .env.example  README.md  environment.yml  streamlit_app.py
streamlit/e3_comments/: environment.yml  streamlit_app.py  (+1 more)
transform/: LLM_COST_CONTROL.md  README.md  dbt_project.yml
writing-documentation/: index.html
(+273 files in other folders)
