[project]
name = "caldata-engaged-california"
version = "0.1.0"
description = "Caldata Engaged California"
authors = ["Caldata Data Operations and Engineering <odi-caldata-dse@innovation.ca.gov>"]
license = "MIT"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "dbt-core~=1.10",
    "dbt-snowflake~=1.10",
    "mkdocs-material~=9.6.14",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "sqlfluff>=3.4.1",
    "sqlfluff-templater-dbt>=3.4.1",
]
